Fixed horizontal scroll in home page was caused by statistics section and solved by adding overflow-x hidden

--- a/assets/scss/rtl/style-rtl.scss
+++ b/assets/scss/rtl/style-rtl.scss
@@ -2689,6 +2689,7 @@ header {
   justify-content: space-between;
   gap: 1.5rem;
   grid-gap: 1.5rem;
+  overflow-x: hidden;
 
   @media (max-width: 1024px) {
     flex-direction: column-reverse;
@@ -2703,8 +2704,6 @@ header {
       width: 100%;
       height: 267px;
     }
-
-    @media (max-width: 768px) {}
 
     img {
       width: 100%;
